# Ansible-Provision-Firewall

./: README.md  ansible.cfg  inventory.yaml  playbook.yaml  pyproject.toml
group_vars/panorama/: auth.yaml
