[tool.poetry]
name = "ansible-provision-firewall"
version = "0.1.0"
description = ""
authors = ["Network Automation <panofficehours@proton.me>"]
readme = "README.md"
packages = [{include = "ansible_provision_firewall"}]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^7.1.0"
pan-os-python = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
